# brd

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  style.css  tabbarwithcontrol.cpp  tabbarwithcontrol.h  tabsmodel.cpp  tabsmodel.h
adapter/: CoreAdapter.cpp  CoreAdapter.h
core/: BrowserCore.cpp  BrowserCore.h  CMakeLists.txt  Event.h  EventTypes.h  HandlerId.cpp  HandlerId.h  Identifier.h  Tab.cpp  Tab.h  TabHistory.cpp  TabHistory.h  TabId.cpp  TabId.h  TabIdGenerator.h  TabManager.cpp  TabManager.h  Url.h  test.cpp  test.db
core/include/core/: BrowserCore.h  Event.h  Identifier.h  Tab.h  Url.h  eventArgs.h  models.h  types.h
core/src/: BrowserCore.cpp
core/src/services/history/: HistoryService.cpp  HistoryService.h
core/src/services/tabs/: Tab.cpp  TabHistory.cpp  TabIdGenerator.cpp  TabIdGenerator.h  TabManager.cpp  TabManager.h
models/: tabsmodel.cpp  tabsmodel.h
ui/: mainwindow.cpp  mainwindow.h  tabbarwithcontrol.cpp  tabbarwithcontrol.h
